--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-<body bgcolor=black>
+<body bgcolor=gtsy>
 <center>
-<h2><font color=yellow> PAGE from RJ</font></h2>
+<h2><font color=green> PAGE from RJ</font></h2>
 <font color=magenta> TESTING PAGE </font>
 </center>
 </body>
