--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor=gtsy>
+<body bgcolor=gray>
 <center>
 <h2><font color=green> PAGE from RJ</font></h2>
 <font color=magenta> TESTING PAGE </font>
